@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/pecl-apcu
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-apcu/ChangeLog,v 1.1 2013/04/30 10:08:33 olemarkus Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-php/pecl-apcu/ChangeLog,v 1.2 2013/06/26 09:18:23 olemarkus Exp $
+
+*pecl-apcu-4.0.1-r1 (26 Jun 2013)
+
+  26 Jun 2013; Ole Markus With <olemarkus@gentoo.org>
+  +pecl-apcu-4.0.1-r1.ebuild:
+  Revbump. Fix issue with --enable-apcu-mmap disables mmap (!)
 
 *pecl-apcu-4.0.0 (30 Apr 2013)
 *pecl-apcu-4.0.1 (30 Apr 2013)
